# custom-nixpkgs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Makefile  README.md  default.nix  flake.nix  shell.nix  statix.toml  update.sh  xtask
.github/workflows/: build.yml  build.yml.disabled  check.yml  flake-lock-maintenance.yml  nix-github-actions.yml  populate-rust-analyzer-cache.yml  update.yml
lib/: mk-rust-platform.nix
overlays/: default.nix
pkgs/: default.nix
pkgs/adb-sync/: default.nix
pkgs/adbtuifm/: default.nix
pkgs/adx/: default.nix
pkgs/argc/: default.nix
pkgs/aria2gtls/: default.nix
pkgs/bundletool-bin/: default.nix
pkgs/cargo-dist/: default.nix
pkgs/cargo-dist-unstable/: default.nix
pkgs/clipboard-substitutor/: default.nix
pkgs/comma/: default.nix
pkgs/diffuse/: default.nix
pkgs/diffuse-bin/: default.nix
pkgs/dracula-gtk-theme-unstable/: default.nix
pkgs/fclones/: default.nix
pkgs/file-collector/: default.nix
pkgs/fsrx/: default.nix
pkgs/gdrive/: default.nix
pkgs/git-branchless/: default.nix
pkgs/git-quickfix/: default.nix
pkgs/gitice/: default.nix
pkgs/gphotos-cdp/: default.nix
pkgs/grit/: default.nix
pkgs/hcctl/: default.nix
pkgs/healthchecks-monitor/: default.nix
pkgs/helix/: default.nix
pkgs/himalaya/: default.nix
pkgs/hyperlink/: default.nix
pkgs/jetbrains-mono-nerdfonts/: default.nix
pkgs/jless/: default.nix
pkgs/katbin/: default.nix
pkgs/linkleaner/: default.nix
pkgs/lurk/: default.nix
pkgs/lychee/: default.nix
xtask/: Cargo.toml
xtask/src/: cmds.rs  main.rs
(+19 files in other folders)
