[package]
name = "xtask"
version = "0.1.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
color-eyre = { version = "0.5.11", default-features = false }
walkdir = "2.3.2"
